@@ -1,3 +1,5 @@
+- Refactor: Uses XLSXUtil to handle excel files [#qubIT-Omnis-6065]
+
 2.6.0 (17-06-2024)
 - Improvement: Performs release for jdk 17 [#qubIT-Omnis-4737]
 
